# CutFEM-Library

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  bitAppPass  build_lib.sh  cutFEMConfig.in  info.txt  listBug.txt  run.sh  script_gnuplot  time_stuff.hpp  toAdd.txt  todo
FESpace/: BDM1.cpp  CMakeLists.txt  CutFESpace.hpp  FESpace.hpp  GTypeOfFE.hpp  GTypeOfFE_Sum.hpp  P0.cpp  P1.cpp  P1dc.cpp  P2.cpp  P2BR.cpp  P2dc.cpp  P3.cpp  P3dc.cpp  P4.cpp  QuadratureFormular.cpp  QuadratureFormular.hpp  RT0.cpp  RT1.cpp  RT2.cpp  checkPoint.cpp  expression.cpp  expression.hpp  expression.tpp  finiteElement.cpp  finiteElement.hpp  integrationFunFEM.hpp  interpolation.hpp  interpolationMatrix.hpp  limiter.cpp  limiter.hpp  macroElement.cpp  macroElement.hpp  normsFunFEM.hpp  operationTypeFE.hpp  paraview.cpp  paraview.hpp  restriction.hpp  transformation.cpp  transformation.hpp
common/: CMakeLists.txt  DA.hpp  GenericElement.hpp  GenericInterface.hpp  GenericMesh.cpp  GenericMesh.hpp  HashTable.hpp  Interface2dn.hpp  Interface3dn.hpp  Label.hpp  Mesh1dn.cpp  Mesh1dn.hpp  Mesh2dn.cpp  Mesh2dn.hpp  Mesh3dn.cpp  Mesh3dn.hpp  R1.hpp  R2.hpp  R3.hpp  RNM.hpp  RNM_op.hpp  RNM_opc.hpp  RNM_tpl.hpp  SparseMatMap.cpp  SparseMatMap.hpp  base_interface.cpp  base_interface.hpp  cutData.hpp  cut_mesh.cpp  cut_mesh.hpp  cut_method.cpp  cut_method.hpp  dataStruct1D.cpp  dataStruct1D.hpp  dataStruct2D.cpp  dataStruct2D.hpp  dataStruct3D.cpp  dataStruct3D.hpp  fixeLabel.hpp  fracture.hpp  (+11 more)
cpp/: CMakeLists.txt  cutFEMConfig.h  cutfem.hpp  time_stuff.hpp  tool.hpp
cpp/FESpace/: BDM1.cpp  BDM2.cpp  CMakeLists.txt  CutFESpace.cpp  CutFESpace.hpp  FESpace.cpp  FESpace.hpp  GTypeOfFE.cpp  GTypeOfFE.hpp  GTypeOfFE_Sum.cpp  GTypeOfFE_Sum.hpp  Ned0.cpp  NumberSpace.hpp  P0.cpp  P1.cpp  P1dc.cpp  P2.cpp  P2BR.cpp  P2dc.cpp  P3.cpp  P3dc.cpp  P4.cpp  QuadratureFormular.cpp  QuadratureFormular.hpp  RT0.cpp  RT1.cpp  RT2.cpp  checkPoint.hpp  expression.cpp  expression.hpp  expression.tpp  finiteElement.cpp  finiteElement.hpp  funfem_util.hpp  integrationFunFEM.hpp  interpolation.hpp  interpolationMatrix.cpp  limiter.cpp  limiter.hpp  macroElement.cpp  (+8 more)
cpp/algoim/: quadrature_general.hpp  uvector.hpp
cpp/cmake/: FindLAPACK.cmake  FindMUMPS.cmake  FindPETSC.cmake  FindSCOTCH.cmake  FindUMFPACK.cmake
cpp/common/: AlgoimInterface.cpp  AlgoimInterface.hpp  AlgoimInterface.tpp  CMakeLists.txt  DA.hpp  GTime.cpp  GTime.hpp  GenericElement.hpp  GenericInterface.hpp  GenericMesh.cpp  GenericMesh.hpp  GenericVertex.hpp  Interface2dn.cpp  Interface3dn.cpp  Label.hpp  Mesh1dn.cpp  Mesh1dn.hpp  Mesh2dn.cpp  Mesh2dn.hpp  Mesh3dn.cpp  Mesh3dn.hpp  R1.hpp  R2.hpp  R3.hpp  RNM.hpp  RNM_op.hpp  RNM_opc.hpp  RNM_tpl.hpp  SparseMatMap.cpp  SparseMatMap.hpp  base_interface.cpp  base_interface.hpp  checkPoint.hpp  cut_mesh.cpp  cut_mesh.hpp  cut_mesh.tpp  cut_method.cpp  cut_method.hpp  dataStruct1D.cpp  dataStruct1D.hpp  (+23 more)
cpp/concept/: function.hpp
cpp/example/: CMakeLists.txt  meshing.cpp
cpp/force_project/: CMakeLists.txt  csvfile.hpp  force.cpp  force_test.cpp  input_handler.cpp  input_handler.hpp  show_force.cpp  stokes_solver.hpp  util.hpp  yaml_reader.cpp  yaml_reader.hpp
cpp/iceSheet/: CMakeLists.txt  dataSara.hpp  iceSheet.cpp  iceSheet.hpp  integral_iceSheet.hpp  markerIceSheet.cpp  markerIceSheet.hpp
cpp/mainFiles/: RBSeuler3D.cpp  RBsimpsonP1.cpp  algoim_bulk.cpp  algoim_bulk2.cpp  algoim_henry.cpp  algoim_surf2.cpp  algoim_surfactant.cpp  bulkSurface.cpp  bulkSurfactantNavierStokes.cpp  bulk_convection_diffusion.cpp  bulk_convection_diffusion2.cpp  bulk_convection_diffusion_cg.cpp  burger2.cpp  cg_bulk_convection_diffusion.cpp  cg_coupled_convdiff_langmuir.cpp  cg_coupled_convection_diffusion.cpp  curvature2.cpp  cutStokes3.cpp  darcy.cpp  dg_bulk_convection_diffusion.cpp  dg_bulk_stationary.cpp  eriks_maxwell.cpp  euler.cpp  eulerFilter.cpp  fictitious.cpp  force.cpp  iceSheetMain.cpp  kiln_bed_motion.cpp  langmuir.cpp  laplace_beltrami.cpp  laplace_beltrami_triangle.cpp  limiter_example.cpp  mainPoisson.cpp  mainRBsurfactantSimpsonP1.cpp  mainSurfactantStokes.cpp  mainTest.cpp  mainTimeCutFEM.cpp  maxwell.cpp  maxwell3D.cpp  maxwell_eig.cpp  (+34 more)
cpp/num/: DA.hpp  gnuplot.hpp  matlab.hpp  print_container.hpp  redirectOutput.hpp  sort_array.hpp  timer.hpp  util.hpp
cpp/parallel/: CMakeLists.txt  cfmpi.cpp  cfmpi.hpp  cfmpi.tpp  cfomp.hpp  dummy_cfmpi.hpp  partitioner.cpp  partitioner.hpp
cpp/problem/: AlgoimBaseCutProblem.hpp  AlgoimBaseCutProblem.tpp  AlgoimIntegration.hpp  CMakeLists.txt  CutFEM_parameter.cpp  CutFEM_parameter.hpp  baseCutProblem.hpp  baseCutProblem_Function.hpp  baseProblem.cpp  baseProblem.hpp  baseProblemTime.hpp  baseProblem_Function.hpp  curvature.hpp  cutLevelSet.cpp  cutLevelSet.hpp  extension.cpp  extension.hpp  generalNorm.hpp  itemVF.cpp  itemVF.hpp  levelSet.cpp  levelSet.hpp  mapping.hpp  problem.cpp  problem.hpp  projection.hpp  reinitialization.cpp  reinitialization.hpp  reinitialization.tpp  solver_advection.hpp  solver_curvature.hpp  solver_stokes.hpp  testFunction.cpp  testFunction.hpp  time_scheme.hpp
cpp/solver/: CMakeLists.txt  solver.cpp  solver.hpp  solverMumps.cpp  solverMumps.hpp  solverMumpsMPI.cpp
cpp/test/: CMakeLists.txt  test_BDM2.hpp  test_TimeInterface.hpp  test_expression.hpp  test_main.cpp  test_mesh.hpp  test_quadrature.hpp  test_test_function.hpp
cpp/util/: DA.hpp  cputime.h  newton.hpp  redirectOutput.hpp  util.hpp
cpp/wrap_lib/: lib_cutfem.cpp  lib_cutfem.hpp  lib_darcy.cpp  lib_darcy.hpp  lib_stokes.cpp  (+1 more)
problem/: CMakeLists.txt  CutFEM_parameter.cpp  CutFEM_parameter.hpp  GenericMapping.cpp  GenericMapping.hpp  baseCutProblem.hpp  baseCutProblemTime.hpp  baseCutProblem_Function.hpp  baseProblem.cpp  baseProblem.hpp  baseProblemTime.hpp  baseProblem_Function.hpp  baseSurfProblem.hpp  curvature.hpp  extension.cpp  extension.hpp  generalNorm.hpp  itemVF.cpp  itemVF.hpp  levelSet.cpp  levelSet.hpp  problem.cpp  problem.hpp  projection.hpp  reinitialization.cpp  reinitialization.hpp  testFunction.cpp  testFunction.hpp
(+167 files in other folders)
